<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/hi"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identify"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title_home"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_home" />

            <ImageButton
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_white"
                android:contentDescription="@string/favorite"
                android:padding="8dp"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

        <FrameLayout
        android:id="@+id/slide_home"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_pink2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/title_image_slider1"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/intro3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/analyze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_colorprimary"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slide_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_analyze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analyze"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btn_different_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary2"
        android:text="@string/undertone"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/analyze"
        app:layout_constraintTop_toBottomOf="@+id/analyze" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_different_stories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_different_stories"
        app:layout_constraintTop_toTopOf="@+id/btn_different_stories" />

    <Button
        android:id="@+id/btn_know_skintone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink2"
        android:text="@string/how_know"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/btn_different_stories"
        app:layout_constraintTop_toBottomOf="@+id/btn_different_stories" />

    <Button
        android:id="@+id/btn_care_skintone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_care"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/btn_know_skintone"
        app:layout_constraintEnd_toEndOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_know_skintone" />


</androidx.constraintlayout.widget.ConstraintLayout>